@@ -25,6 +25,7 @@ fixed bugs:
 - fixed bug with handling of empty logicor and bounddisjunction constraints
 - fixed bug which disabled iteration limit in SCIPlpSolveAndEval()
 - fixed bug in cumulative constraint handler w.r.t. getting active variables
+- fixed bug concerning usage of dualbound and lowerbound
 
 features:
 - added delayed cutpool which only get separated if the sepastore is empty after a separation round
